# table-ldap

./: .gitignore  Makefile.am  aldap.c  aldap.h  ber.c  ber.h  configure.ac  shell.nix  table-ldap.5  table-ldap.conf.example  table_api.c  table_api.h  table_ldap.c  table_stdio.c  table_stdio.h
